@@ -81,6 +81,7 @@
     // Widget
     var lead_filteringSelect = FilteringSelect({
       name: 'lead_id',
+      label: 'Leader',
       required: false
     }, 'department_lead');
     lead_filteringSelect.startup();
