@@ -102,6 +102,7 @@
         name: 'target_entity_type',
         label: 'Target Entity Type',
         required: true,
+        placeHolder: 'Select A Target Entity Type',
         store: target_entity_type_store,
 {#        value: target_entity_type_store.data[0].id#}
         value: '{% if target_entity_type %}{{ target_entity_type }}{% else %}{% endif %}'
